@@ -43,7 +43,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- BCrypt dependency -->
+        <!-- Mockito for mocking -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
@@ -65,6 +65,7 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- BCrypt dependency -->
         <dependency>
             <groupId>org.mindrot</groupId>
             <artifactId>jbcrypt</artifactId>
@@ -78,6 +79,7 @@
             <version>3.36.0.3</version>
         </dependency>
 
+        <!-- Maven Javadoc Plugin -->
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
@@ -107,6 +109,12 @@
                     <systemPropertyVariables>
                         <java.awt.headless>true</java.awt.headless>
                     </systemPropertyVariables>
+                    <argLine>
+                        --add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
 
